2007-03-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/spellcheck-dialog.glade:
	* data/ui.xml:
	* gaupol/gtk/_actions/spellcheck.py:
	* gaupol/gtk/_agents/spellcheck.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/spellcheck.py:
	Add spell-check.

2007-03-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui.xml:
	* gaupol/gtk/_actions/__init__.py:
	* gaupol/gtk/_actions/spellcheck.py:
	* gaupol/gtk/_agents/__init__.py:
	* gaupol/gtk/_agents/spellcheck.py:
	Add spell-check configuration.

2007-03-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/frconvert-dialog.glade:
	* data/ui.xml:
	* gaupol/gtk/_actions/position.py:
	* gaupol/gtk/_agents/position.py:
	* gaupol/gtk/dialogs/frconvert.py:
	* gaupol/gtk/dialogs/__init__.py:
	Add framerate conversion.

2007-03-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/duradjust-dialog.glade:
	* data/ui.xml:
	* gaupol/gtk/_actions/position.py:
	* gaupol/gtk/_agents/position.py:
	* gaupol/gtk/dialogs/duradjust.py:
	* gaupol/gtk/dialogs/__init__.py:
	Add duration adjust.

2007-03-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/files/mpsub.py:
	* gaupol/files/subrip.py:
	* gaupol/files/subviewer2.py:
	Use regular expression substitution instead of insane slicing to
	right-strip the final newline off texts.

2007-03-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/_agents/text.py (capitalize):
	Use Parser instead of Finder.

2007-03-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/posadjust.py:
	Fix text view widths.

2007-03-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/posadjust-dialog.glade:
	* data/ui.xml:
	* gaupol/gtk/_actions/file.py:
	* gaupol/gtk/_actions/position.py:
	* gaupol/gtk/_agents/position.py:
	* gaupol/gtk/_agents/preview.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/posadjust.py:
	* gaupol/gtk/dialogs/posshift.py:
	Add position adjust.

2007-03-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/observable.py (block_all, unblock_all):