@@ -15,13 +15,11 @@ Dependencies
 ============
 
 Gaupol requires Python [1] 2.5 or greater and PyGTK [2] 2.10 or
-greater. PyEnchant [3] 1.1.3 or greater is required for
-spell-checking. iso-codes [4], if available, will be used to translate
-language and country names used by the spell-checker. Additionally,
-spell-checking requires a dictionary, any of Aspell/Pspell, Ispell,
-MySpell, Uspell, Hspell or AppleSpell. Universal Encoding Detector [5]
-is required for character encoding auto-detection. MPlayer [6] or
-VLC [7] is recommended for preview.
+greater. Optional dependencies include: PyEnchant [3] 1.1.3 or
+greater, required for spell-checking; iso-codes [4], used to translate
+language and country names used by the spell-checker; Universal
+Encoding Detector [5], required for character encoding auto-detection
+and MPlayer [6] or VLC [7], recommended for preview.
 
  [1] http://www.python.org/
  [2] http://www.pygtk.org/
