@@ -1,15 +1,6 @@
 Gaupol 0.8
 ==========
 
- * Check PyEnchant 1.3.0 for API changes
- * Search for "FIX", "TODO", etc.
- * Review all mnemonics
- * What settings should dialogs remember?
- * Examine Application.update_gui calls
- * Test searching for unicode strings and regexes
- * util.gc_collected
- * GNOME Bugzilla: http://live.gnome.org/Bugsquad/ForMaintainers
-
 Changes:
  [D] Configuration file backend and syntax changed
  [D] Fixed numerous bugs with find and replace
@@ -28,9 +19,9 @@ Changes:
  [D] Fixed a bug in the time entry validation
  [D] Migrated to gtk.RecentManager and gtk.RecentChooser
  [D] Added a menu for recent translation files
- [D] Added "Text" menu to replace "Format", "Search" and part of
+ [ ] Added "Text" menu to replace "Format", "Search" and part of
      "Edit" menus
- [D] Reordrable tabs
+ [D] Reorderable tabs
  [D] Added more informative tooltips on tabs
  [D] Simplified and changed several keycombos
  [D] Subtitle number search now starts only on numeric key-presses
@@ -39,7 +30,9 @@ Changes:
  [D] Spin buttons as editors in frame column cells
  [D] Greater contrast in the icon
  [D] Added --config-file, --encoding, --list-encodings,
-     --translation-file,  --video-file and +NUM options
+     --translation-file,  --video-file and +[NUM] options
+ [D] Applied GNOME Goal #3: Remove "Application" category from
+     .desktop files
  [D] Fixed translatable strings with multiple arguments
  [D] Added a manual page
  [D] SRTX support dropped
@@ -64,7 +57,7 @@ Gaupol 0.9
     * Move UIMAction.is_doable to be a callback method attribute?
  * Integrate the MenuToolButtons with UIManager
  * Review and adapt to various fixes to gtk.Recent* (e.g. #418219)
- * Move to using Glade 3 is acceptable
+ * Carefully experiment with Glade 3
 
 New:
  [ ] Text correction assistant
@@ -85,22 +78,16 @@ Unscheduled Possibilities
  * Interactive search
  * Document hidden settings (where?)
  * Multiple windows and tab drag-dropping between them
-    - http://live.gnome.org/GTK+/ApplicationClass
-    - http://www.mail-archive.com/pygtk@daa.com.au/msg14080.html
+    * http://live.gnome.org/GTK+/ApplicationClass
+    * http://www.mail-archive.com/pygtk@daa.com.au/msg14080.html
  * Any use for lazy loading?
-    - http://blogs.gnome.org/view/jamesh/2006/03/31/0
+    * http://blogs.gnome.org/view/jamesh/2006/03/31/0
  * Windows installer
-    - http://live.gnome.org/PyGTK/FAQ/Win32AndPygtk
-    - http://trac.gajim.org/wiki/DevWindows
-    - http://svn.berlios.de/svnroot/repos/griffith/trunk/
-    - http://www.nicotine-plus.org/browser/trunk/nicotine+/tools
-    - http://aruiz.typepad.com/siliconisland/2006/12/allinone_win32_.html
+    * http://live.gnome.org/PyGTK/FAQ/Win32AndPygtk
+    * http://trac.gajim.org/wiki/DevWindows
+    * http://svn.berlios.de/svnroot/repos/griffith/trunk/
  * Plugin system (see Gedit)
-    - http://www.mono-project.com/Mono.Addins
  * Built-in GStreamer preview
-    - http://gstreamer.freedesktop.org/modules/gst-python.html
-    - http://pygstdocs.berlios.de/
-    - http://www.jonobacon.org/?p=750
-    - http://jokosher.org
-    - http://pitivi.sourceforge.net/
-    - http://jasonderose.org/kungfu/
+    * http://gstreamer.freedesktop.org/modules/gst-python.html
+    * http://pygstdocs.berlios.de/
+    * http://www.jonobacon.org/?p=750
