@@ -16,4 +16,4 @@ Timer: 100.0000
 
 [V4 Styles]
 Format: Name, Fontname, Fontsize, PrimaryColour, SecondaryColour, TertiaryColour, BackColour, Bold, Italic, BorderStyle, Outline, Shadow, Alignment, MarginL, MarginR, MarginV, AlphaLevel, Encoding
-Style: Default,Arial,18,&HFFFFFF,&HFFFF00,&H000000,&H000000,0,0,1,2,2,2,30,30,30,0,0
+Style: Default,Sans,18,&HFFFFFF,&HFFFF00,&H000000,&H000000,0,0,1,2,2,2,30,30,30,0,0
