@@ -9,4 +9,4 @@
 [COMMENT]
 [END INFORMATION]
 [SUBTITLE]
-[COLF]&HFFFFFF,[STYLE]bd,[SIZE]18,[FONT]Arial
+[COLF]&HFFFFFF,[STYLE]bd,[SIZE]18,[FONT]Sans
