@@ -1,4 +1,4 @@
-Subtitle File Format Specification Licences
+Subtitle File Format Specification Licenses
 ===========================================
 
 All other files in this directory are bound by the same license as
