@@ -9,7 +9,7 @@
 [COMMENT]
 [END INFORMATION]
 [SUBTITLE]
-[COLF]&HFFFFFF,[STYLE]bd,[SIZE]18,[FONT]Arial
+[COLF]&HFFFFFF,[STYLE]bd,[SIZE]18,[FONT]Sans
 
 00:00:59.19,00:01:03.20
 I always wanted to leave my country[br]and go somewhere else.
